@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.23.10
-Date: 2021-08-07
+Version: 1.23.11
+Date: 2021-08-10
 Authors@R: c(person("Markus", "Riester",
                     role = c("aut", "cre"),
                     email = "markus.riester@novartis.com",
@@ -33,6 +33,7 @@ Imports:
     GenomeInfoDb,
     GenomicFeatures,
     Rsamtools,
+    Biobase,
     Biostrings,
     BiocGenerics,
     rtracklayer,
