@@ -44,6 +44,7 @@ export(setPriorVcf)
 import(DNAcopy)
 import(IRanges)
 import(VariantAnnotation)
+importFrom(Biobase,package.version)
 importFrom(BiocGenerics,score)
 importFrom(BiocGenerics,unstrand)
 importFrom(Biostrings,DNAStringSet)
